# yoinkctl

./: .gitignore  Cargo.toml  README.md  build-appimage.sh  create-icon.sh  install.sh  uninstall.sh
.github/workflows/: release.yml
assets/: yoinkctl.desktop
src/: autostart.rs  config.rs  gui.rs  history.rs  main.rs  picker.rs
