[package]
name = "yoinkctl"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI framework
eframe = "0.29"
egui = "0.29"

# Screen capture
xcap = "0.0.12"

# Clipboard handling
arboard = "3.4"

# Image processing
image = "0.25"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config directory
dirs = "5.0"

# Global hotkey support
global-hotkey = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
